# CPlantBox

./: .clang-format  .dockerignore  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.bak  CONTRIBUTING.md  CPlantBox.cbp  CPlantBox.ipynb  Change some parameters.ipynb  DartConfiguration.tcl  INSTALLATION_MANUAL_WINDOWS.txt  Leaf.cpp  Leaf.h  LeafGrowth.h  LeafTropism.cpp  LeafTropism.h  MANIFEST.in  Makefile  ModelParameter.cpp  ModelParameter.h  Münch Theory, the origin, the proof and the modeling.ipynb  Organ.cpp  Organ.cpp.orig  Organ.h  PLAN.md  PLAN_legacy.md  Phloem.ipynb  Phloem.ipynb.REMOVED.git-id  Phloem.xml  PiafMunch2_python_test.ini  PiafMunch2_python_test_mg.ini  Plant.cpp  Plant.cpp.orig  Plant.h  PythonPlant.cpp  README.md  (+71 more)
.ipynb_checkpoints/: Morning_glory_7m-checkpoint.ipynb  morning glory_defolie 2.5m-checkpoint.ipynb.REMOVED.git-id
.metadata/: version.ini
Ruthe_main_simulation/: README.md  additional_analysis_graphs.ipynb  analysis_and_plotting_utils.py  pyproject.toml  ruthe_global_variables.py  ruthe_simulation.py  simulation_utils.py  soil_core_geometry.py  soil_core_simulation.py  temperature_graphs.ipynb  visualize_virtual_field.py  volume_weighted_voronoi.py
Ruthe_main_simulation/data/data_processed/: Ruthe_95.CSV  Ruthe_96.CSV  Ruthe_97.CSV  bodentemp_95.pkl  bodentemp_96.pkl  bodentemp_97.pkl  climate_data_94.csv  climate_data_95.csv  climate_data_96.csv  climate_data_97.csv  climate_data_98.csv
Ruthe_main_simulation/data/data_raw/: MiniRhizo1997.csv  MiniRhizoDV130695.csv  MiniRhizoDV260495.csv  SoilCores1996.csv  SoilCores1997.csv  wheat_1995_org1.xml
Ruthe_main_simulation/results/: evaluation_metrics_1996.json  evaluation_metrics_1997.json  full_data_csv_1995.csv  full_data_csv_1997.csv
Ruthe_spatial_resolution_experiment/: .gitignore  README.md  additional_analysis_graphs.ipynb  analysis_and_plotting_utils.py  mini_rhizotron_simulation.py  relative_standard_error.ipynb  resolution_cv_rld.ipynb  ruthe_simulation.py  (+7 more)
examples/: CMakeLists.txt  Makefile  WC.csv  analysis_write_rootsystem.vtp  benchmarks.h  cmake_install.cmake  example1.h  example1_wb_dgf.h  example2.h  example3.h  example4.h  example5.h  example_scenegraph.h  exudation.h  main.cpp  modelparameter  shehan_RhizoTubes.h  shehan_ScaleElongation_CL.h  shehan_SoilCore.h  shehan_Trenches.h  test_cplantbox  test_crootbox
examples/PSP_infiltrationRedistribution1D/: PSP_grid.py  PSP_readDataFile.py  PSP_soil.py  main_couple.py  main_couple2.py  rb_tools.py  siltLoam.txt  soil.txt  soilUniform.txt  soil_clay.txt  soil_sand.txt  xylemflux_test.py
src/: CMakeLists.txt  CMakeLists.txt.bak  ExudationModel.h  ExudationModel2.h  Leaf-ibg3656.cpp  Leaf.cpp  Leaf.h  LeafGrowth.h  LeafTropism.cpp  LeafTropism.h  Makefile  MappedOrganism.cpp  MappedOrganism.h  ModelParameter.cpp  ModelParameter.h  Organ.cpp  Organ.h  Organism.cpp  Organism.h  Photosynthesis-Copy1.cpp  Photosynthesis-Copy2.cpp  Photosynthesis.cpp  Photosynthesis.h  Photosynthesis_beforNR.cpp  Photosynthesis_beforeSeveralInput.cpp  Photosynthesis_failedChanges.cpp  Plant.cpp  Plant.h  PyBoostPlantBox.cpp  PyPlantBox.cpp  PyPlantBox.cpp.bak  PyPlantBox_old.cpp  PythonPlant.cpp  PythonRootSystem.cpp  Root.cpp  Root.h  RootDelay.cpp  RootDelay.h  RootGrowth.h  RootSystem.cpp  (+50 more)
src/PiafMunch/: PM_KLU.cpp  PM_arrays.h  PM_matrix.cpp  PM_vector.cpp  PiafMunch2.cpp  PiafMunch2.h  index_vector.cpp  initialize.cpp  odepack.cpp  odepack.h  runPM.cpp  runPM.h  solve.cpp  sparse_matrix.cpp
src/binder/: postBuild
src/functional/: CellVariablemod.py  ExudationModel.h  HydraulicModel.py  HydraulicsDoussan.py  Leuning.py  MultiPerirhizalManager.cpp  MultiPerirhizalManager.h  New_MultiPerirhizalManager.cpp  New_MultiPerirhizalManager.h  Perirhizal.cpp  Perirhizal.h  Perirhizal.py  PerirhizalHeterogeneous.py  Photosynthesis.cpp  Photosynthesis.h  Photosynthesis.py  PlantHydraulicModel.cpp  PlantHydraulicModel.h  PlantHydraulicModel.py  PlantHydraulicParameters.cpp  PlantHydraulicParameters.h  PlantHydraulicParameters.py  StomataModel.py  XylemFlux.cpp  XylemFlux.h  perirhizal.py  phloem_flux.py  phloem_flux_deprecated.py  photosynthesis_cpp.py  plant_conductivities.py  root_conductivities.py  van_genuchten.py  xylem_flux.py
src/python_modules/: CPlantBox_PiafMunch_bu.py  CPlantBox_PiafMunch_new.py  CPlantBox_PiafMunch_oneligne.py  CellVariablemod - Copy (2).py  CellVariablemod - Copy.py  CellVariablemod.py  HydraulicsDoussan.py  Leuning.py  Mesh1Dmod.py  StomataModel.py  cellVariablemod.py  phloem_flux.py  phloem_flux_bu_20210701.py  phloem_fluxbis.py  photosynthesis_cpp.py  plot_paraview.py  root_conductivities.py  rsml_data.py  rsml_reader.py  rsml_writer.py  test.xml  van_genuchten.py  vtk_plot (1).py:Zone.Identifier  vtk_plot.py  vtk_plot.py:Zone.Identifier  vtk_plot_.py  vtk_plot_modification_explanation.txt  vtk_tools.py  xylem_flux.py  xylem_flux_detached.py
src/rsml/: Plant.py  rsml_data.py  rsml_reader.py
src/structural/: #Seed.cpp#  CoupledPlant.cpp  CoupledPlant.h  GrassLeaf.cpp  GrassLeaf.h  Hyphae.cpp  Hyphae.h  Leaf.cpp  Leaf.h  MappedOrganism.cpp  MappedOrganism.h  MappedOrganism.py  MycorrhizalPlant.cpp  MycorrhizalPlant.h  MycorrhizalRoot.cpp  MycorrhizalRoot.h  Mycorrhizalrootparameter.cpp  Mycorrhizalrootparameter.h  Organ.cpp  Organ.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h  Plant.py  Root.cpp  Root.h  RootDelay.cpp  RootDelay.h  RootSystem.cpp  RootSystem.h  Seed.cpp  Seed.h  SegmentAnalyser.cpp  SegmentAnalyser.h  StaticPlant.py  Stem.cpp  Stem.h  grassleafparameter.cpp  grassleafparameter.h  (+23 more)
src/tools/: parameters.py
src/visualisation/: CatmullRomSpline.h  PlantVisualiser.cpp  PlantVisualiser.h  Quaternion.h  Triticum_aestivum_test_2021 (3).xml:Zone.Identifier  figure_style.py  plot_containers.py:Zone.Identifier  vis_tools.py  vtk_animate.py  vtk_plot (1).py:Zone.Identifier  vtk_plot (9).py:Zone.Identifier  vtk_plot.py  vtk_plot_old.py  vtk_plot_rhizomancer.py  vtk_tools.py
src/visualisation/paraview_macros/: rsAnimate.py  rsTubePlot.py
(+7523 files in other folders)
