# Local wheel build entrypoint:
#   python -m build --wheel

[build-system]
requires = [
  "scikit-build-core==0.12.2",
]
build-backend = "scikit_build_core.build"

[project]
name = "cplantbox"
version = "2.1.0"
requires-python = ">=3.11"

[tool.scikit-build]
build-dir = "_skbuild/{wheel_tag}"
wheel.packages = []

[tool.black]
line-length = 320
target-version = ["py311"]

[tool.isort]
combine_as_imports = true
known_first_party = ["rosi", "plantbox", "my_project"]
sections = ["STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]

[tool.ruff]
line-length = 320
lint.select = ["E", "F", "I"]
lint.ignore = ["E741", "E742", "E743"]
exclude = ["examples", "figures", "jupyter", "latex", "__pycache__"]

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["rosi", "plantbox", "my_project"]
section-order = ["standard-library", "third-party", "first-party", "local-folder"]
lines-between-types = 0
force-sort-within-sections = true
